fix colors kai borders